k8s/backend-deploy.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-svc
    namespace: projet-devops-jordane
spec:
    selector:
        app.kubernetes.io/component: backend
        app.kubernetes.io/name: backend-deploy
    ports:
        - port: 3000
          targetPort: 3000
    type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: projet-devops-jordane
spec:
    replicas: 2
    selector:
        matchLabels:
            app.kubernetes.io/component: backend
            app.kubernetes.io/name: backend-deploy
    template:
        metadata:
            labels:
                app.kubernetes.io/component: backend
                app.kubernetes.io/name: backend-deploy
        spec:
            containers:
                - name: backend
                  image: projetacreni.azurecr.io/backend:latest
                  ports:
                      - containerPort: 3000
