k8s/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    namespace: projet-devops-jordane
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: projetacreni.azurecr.io/frontend:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: projet-devops-jordane
spec:
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: LoadBalancer
